# codif-coicop-eval

./: .gitignore  README.md  _quarto.yml  coicop_imbalance.qmd  index.qmd  init.sh  main.py  package-lock.json  perf.qmd  performance.qmd  pyproject.toml  stats-desc._qmd  stats-desc.qmd
old/: example-dashboard.m  index.m
old/data/: queries.m
src/: .gitignore  index.md
src/config/: duckdb.py
src/data/: queries.md
