[project]
name = "codif-coicop-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pandas>=2.3.0",
    "plotnine>=0.14.5",
    "pyarrow>=20.0.0",
    "s3fs>=2025.5.1",
]
